--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,11 @@ h1 {
   text-align:center;
 }
 img {
-  border-radius: 8px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  opacity: 0.5;
 }
 
 h2 {
