It will have a padded list

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,13 +25,17 @@ h3 {
   color:#5F9EA0;
   text-align: center;
 }
-.projectlist{
-  color:#FF7F50;
+.projectlist {
+  color:#5F9E;
+  text-align: justify;
 }
-
 .githublink {
   list-style-type: upper-roman;
   font-weight: bold;
+}
+ol {
+  background: #8FBC8F;
+  padding: 20px;
 }
 h4 {
   color:#5F9EA0;
