--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,15 @@
 h1 {
   color:#5F9EA0;
-  text-align:center;
+  font-family: sans-serif;
+  font-size: 28px;
+  text-align: center;
 }
+p {
+  font-family: Tahoma, Verdana, sans-serif;
+  }
 .favoritequote {
   color:#FF7F50;
-  text-align:center;
+  text-align: center;
 }
 img {
   display: block;
@@ -15,6 +20,8 @@ img {
 }
 h2 {
   color:#5F9EA0;
+  font-family: sans-serif;
+  font-size: 24px;
   text-align: center;
 }
 .name {
@@ -23,6 +30,8 @@ h2 {
 }
 h3 {
   color:#5F9EA0;
+  font-family: sans-serif;
+  font-size: 23px;
   text-align: center;
 }
 .projectlist {
@@ -39,5 +48,10 @@ ol {
 }
 h4 {
   color:#5F9EA0;
+  font-family: sans-serif;
+  font-size: 24px;
   text-align:center;
+}
+.college {
+  color:#228B22;
 }
