--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 body {
-  background-color:#F0E68Ced
+  background-color:#F0E68Ced;
+  font-size: 12 px;
 }
 h1 {
   color:#5F9EA0;
   font-family: sans-serif;
-  font-size: 28px;
   text-align: center;
 }
 p {
@@ -15,6 +15,7 @@ p {
   text-align: center;
 }
 img {
+  opacity: 0.85;
   width: 300px;
   border: 100px solid #800000;
   padding: 50px;
@@ -71,6 +72,8 @@ h4 {
 }
 .column {
   font-family: Tahoma, Verdana, sans-serif;
+  color:#5F9E; 
   width: 20%;
   float: left;
+  background-color: #8FBC8F;
 }
