Added different text color to bring more flow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+#wholepage 
+{ position: absolute; 
+  margin:0px;
+  width:100%; 
+}
 body {
   background-color:#F0E68Ced;
   font-size: 12 px;
@@ -11,7 +16,7 @@ p {
   font-family: Tahoma, Verdana, sans-serif;
   }
 .favoritequote {
-  color:#FF7F50;
+  color:#800000;
   text-align: center;
 }
 img {
@@ -20,6 +25,8 @@ img {
   border: 100px solid #800000;
   padding: 50px;
   margin: 20px;
+  border-radius: 50%;
+  float: right;
 }
 .center {
   display: block;
@@ -44,13 +51,16 @@ h3 {
   text-align: center;
 }
 .projectlist {
-  color:#5F9E;
+  color: black;
   text-align: justify;
 }
 .githublink {
   font-family: Tahoma, Verdana, sans-serif;
   list-style-type: upper-roman;
   font-weight: bold;
+}
+a {
+  color: #FFF8DC;
 }
 
 ol {
@@ -68,12 +78,12 @@ h4 {
   color:#228B22;
 }
 .subheader {
-  color:#FF7F50;
+  color:#800000;
 }
 .column {
   font-family: Tahoma, Verdana, sans-serif;
-  color:#5F9E; 
-  width: 20%;
+  color: black; 
+  width: 100%;
   float: left;
-  background-color: #8FBC8F;
+  background-color: #DAA520;
 }
